--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div id="device"></div>
-    <script src="..\User Device Detection\node_modules\mobile-detect\mobile-detect.min.js"></script>
+    <script src="\User Device Detection\node_modules\mobile-detect\mobile-detect.min.js"></script>
     <script>
       var md = new MobileDetect(navigator.userAgent);
       if (md.mobile()) {
