--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Device Detection</title>
   </head>
   <body style="background-color: blue;">
-    <div id="device"></div>
+    <div id="device">Nothing Detected!</div>
     <script src="\User Device Detection\node_modules\mobile-detect\mobile-detect.min.js"></script>
     <script>
       var md = new MobileDetect(navigator.userAgent);
