--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body style="background-color: blue;">
     <div id="device">Nothing Detected!</div>
-    <script src="\Mobile-Detection/node_modules/mobile-detect/mobile-detect.min.js"></script>
+    <script src="node_modules/mobile-detect/mobile-detect.min.js"></script>
     <script>
       var md = new MobileDetect(navigator.userAgent);
       if (md.mobile()) {
