--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>Device Detection</title>
   </head>
-  <body style="background-color: blue;">
-    <div id="device">Nothing Detected!</div>
+  <body>
+    <div id="device"></div>
     <script src="/node_modules/mobile-detect/mobile-detect.min.js"></script>
     <script>
       var md = new MobileDetect(navigator.userAgent);
