--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Device Detection</title>
   </head>
-  <body style="background-color: blue">
+  <body>
     <div id="device"></div>
     <script src="/node_modules/mobile_detect/mobile-detect-min.js"></script>
     <script>
