--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div id="device"></div>
-    <script src="/node_modules/mobile_detect/mobile-detect-min.js"></script>
+    <script src="../node_modules/mobile_detect/mobile-detect-min.js"></script>
     <script>
       var md = new MobileDetect(navigator.userAgent);
       if (md.mobile()) {
