--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <title>Device Detection</title>
   </head>
-  <body>
+  <body style="background-color: blue">
     <div id="device"></div>
-    <script src="..\Mobile-Detection\node_modules\mobile_detect\mobile-detect-min.js"></script>
+    <script src="\Mobile-Detection\node_modules\mobile_detect\mobile-detect-min.js"></script>
     <script>
       var md = new MobileDetect(navigator.userAgent);
       if (md.mobile()) {
