--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Device Detection</title>
   </head>
-  <body style="background-color: blue">
+  <body style="background-color: yellow">
     <div id="device"></div>
     <script src="/Mobile-Detection/node_modules/mobile-detect/mobile-detect.min.js"></script>
     <script>
