--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Device Detection</title>
   </head>
-  <body style="background-color: yellow">
+  <body style="background-color: grey">
     <div id="device"></div>
     <script src="https://cdn.jsdelivr.net/npm/mobile-detect@1.4.4/mobile-detect.min.js">
       var md = new MobileDetect(navigator.userAgent);
