--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <title>Device Detection</title>
   </head>
-  <body style="background-color: grey">
+  <body>
     <div id="device"></div>
-    <script src="https://cdn.jsdelivr.net/npm/mobile-detect@1.4.4/mobile-detect.min.js">
+    <script src="https://cdn.jsdelivr.net/npm/mobile-detect@1.4.4/mobile-detect.min.js"></script>
+    <script>
       var md = new MobileDetect(navigator.userAgent);
       if (md.mobile()) {
         document.getElementById("device").innerHTML = "Mobile Phone";
