--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body style="">
     <div id="device"></div>
-    <script src="\Mobile-Detection\node_modules\mobile-detect\mobile-detect.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mobile-detect@1.4.4/mobile-detect.min.js"></script>
     <script>
       var md = new MobileDetect(navigator.userAgent);
       if (md.mobile()) {
