--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Device Detection</title>
   </head>
-  <body>
+  <body style="font-size: 26px;">
     <div id="device"></div>
     <script src="https://cdn.jsdelivr.net/npm/mobile-detect@1.4.4/mobile-detect.min.js"></script>
     <script>
